# CleanSaaS

./: .cursorrules  .gitignore  README.md  RoadMAP.md  docker-compose.yml  env.template
.cursor/rules/: backend.mdc  data-pipeline.mdc  frontend.mdc
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  a866e93d4a96_initial_migration_tables.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  datasets.py  debug.py  files.py  jobs.py
backend/app/core/: config.py  db.py  errors.py
backend/app/models/: __init__.py  base.py  cleaning_job.py  dataset.py  project.py
backend/app/schemas/: jobs.py  storage.py
backend/app/services/: storage.py
backend/app/services/engine/: __init__.py  cleaning_engine.py  parser.py
backend/scripts/: init_db.ps1  init_db.sh
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CleaningRules.tsx  DataPreview.tsx  FileUploader.tsx  JobStatus.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  progress.tsx  select.tsx
infra/: README.md  init-minio.sh  setup-minio-cors.sh
